@@ -1,0 +1,8 @@
+	.text
+	.long 0
+	.section ".rodata", "a", %progbits
+	.long 0
+	.section ".moredata", "a", %progbits
+	.long 0
+	.section ".notdata", "", %progbits
+	.long 0
